--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     width: 100%;
     height: 100px;
     color: white;
