--- a/css/vuser.css
+++ b/css/vuser.css
@@ -2,7 +2,7 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        background-color: gray;
+        background-color: #e5e5dc;
     }
     section div {
         display: flex;
@@ -15,13 +15,13 @@
         border-collapse: collapse;
         border-radius: 8px;
         box-shadow: 0 7px 25px black;
-        color:white;
+        color:#c4a35a;
     }
     table td,
     table th {
         width: 10%;
         text-align: center;
-        border-bottom: 1px solid #fbcbc9;
+        border-bottom: 1px solid #c66b3d;
     }
     
     
@@ -37,13 +37,13 @@
     .bandeau1 a {
         margin-bottom: 3%;
         padding: 1%;
-        border: 2px solid darkslategrey;
+        border: 2px solid #c66b3d;
         width: 100px;
         text-align: center;
         text-decoration: none;
         border-radius: 10px;
-        background-color: darkslategrey;
-        color: white;
+        background-color: #c66b3d;
+        color: #c4a35a;
         transition: 0.7s;
     }
     
@@ -54,13 +54,13 @@
     .retour a {
         margin-bottom: 3%;
         padding: 1%;
-        border: 2px solid darkslategrey;
+        border: 2px solid #c66b3d;
         width: 100px;
         text-align: center;
         text-decoration: none;
         border-radius: 10px;
-        background-color: darkslategrey;
-        color: white;
+        background-color: #c66b3d;
+        color: #c4a35a;
         margin-top: 3%;
         transition: 0.7s;
     }
@@ -70,9 +70,9 @@
     }
     
     .open-button {
-        background-color: #be1558;
-        color: white;
-        padding: 4%;
+        background-color: #26495c;
+        color: #c4a35a;
+        padding: 1%;
         border-radius: 10px;
         border: none;
         cursor: pointer;
@@ -97,8 +97,11 @@
     .form-container {
         max-width: 300px;
         padding: 10px;
-        background-color: white;
-    }
+        background-color: #e5e5dc;
+        box-shadow: 9px 6px 12px #c66b3d;
+        border-radius: 8px;
+      }
+      
     
     /* Full-width input fields */
     .form-container input[type="text"],
@@ -119,8 +122,8 @@
     
     /* Set a style for the submit/login button */
     .form-container .btn {
-        background-color: blueviolet;
-        color: white;
+        background-color: #26495c;
+        color: #c4a35a;
         padding: 16px 20px;
         border: none;
         cursor: pointer;
